--- a/src/ListenTogether/Pages/LoginPage.xaml
+++ b/src/ListenTogether/Pages/LoginPage.xaml
@@ -30,17 +30,17 @@
                    Placeholder="密码"
                    IsPassword="True"
                    ReturnType="Done"
-                   ReturnCommand="{Binding LoginCommand}"
+                   ReturnCommand="{Binding LoginAsyncCommand}"
                    Margin="0,0,0,10"/>
 
             <Button Text="登录"
                     Margin="0,10,0,0"
-                    Command="{Binding LoginCommand}"
+                    Command="{Binding LoginAsyncCommand}"
                     BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBtnBackground},Light={StaticResource LightBtnBackground}}"
                     TextColor="{AppThemeBinding Dark={StaticResource DarkBtnText},Light={StaticResource LightBtnText}}"/>
             <Button Text="新用户注册"
                     Margin="0,5,0,0"
-                    Command="{Binding GoToRegisterCommand}"
+                    Command="{Binding GoToRegisterAsyncCommand}"
                     BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBtnBackground},Light={StaticResource LightBtnBackground}}"
                     TextColor="{AppThemeBinding Dark={StaticResource DarkBtnText},Light={StaticResource LightBtnText}}"/>
         </StackLayout>
