--- a/src/ListenTogether/Pages/RegisterPage.xaml
+++ b/src/ListenTogether/Pages/RegisterPage.xaml
@@ -48,7 +48,7 @@
                    WidthRequest="48"
                    Margin="0,0,10,0"/>
                 <Button Text="选择"
-                        Command="{Binding ChoseImageCommand}"
+                        Command="{Binding ChoseImageAsyncCommand}"
                         BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBtnBackground},Light={StaticResource LightBtnBackground}}"
                         TextColor="{AppThemeBinding Dark={StaticResource DarkBtnText},Light={StaticResource LightBtnText}}"/>
             </HorizontalStackLayout>
@@ -58,7 +58,7 @@
 
             <Button Text="注册"
                     Margin="0,20,0,0"
-                    Command="{Binding RegisterCommand}"
+                    Command="{Binding RegisterAsyncCommand}"
                     BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBtnBackground},Light={StaticResource LightBtnBackground}}"
                     TextColor="{AppThemeBinding Dark={StaticResource DarkBtnText},Light={StaticResource LightBtnText}}"/>
         </StackLayout>
