--- a/src/ListenTogether/Pages/SettingsPage.xaml
+++ b/src/ListenTogether/Pages/SettingsPage.xaml
@@ -47,7 +47,7 @@
                                 BorderColor="{AppThemeBinding Dark={StaticResource DarkBtnText},Light={StaticResource LightBtnText}}"
                                 BorderWidth="1"
                                 HorizontalOptions="StartAndExpand"
-                                Command="{Binding GoToLoginCommand}"/>
+                                Command="{Binding GoToLoginAsyncCommand}"/>
                             </StackLayout>
                             <!--已登录-->
                             <StackLayout VerticalOptions="Start"
@@ -174,6 +174,19 @@
                                 Text="播放我的歌单前清空播放列表"
                                 IsToggled="{Binding IsCleanPlaylistWhenPlayMyFavorite}"/>
 
+                            <StackLayout Margin="0,10,0,0"
+                                         RadioButtonGroup.GroupName="音质"
+                                         RadioButtonGroup.SelectedValue="{Binding MusicFormatType}">
+                                <Label Text="首选音质（无匹配音质时自动使用下一音质）" />
+                                <RadioButton Content="普通"
+                                             Value="PQ"/>
+                                <RadioButton Content="高品质"
+                                             Value="HQ" />
+                                <RadioButton Content="超高品质"
+                                             Value="SQ" />
+                                <RadioButton Content="比超高还高，应该叫啥？"
+                                             Value="ZQ" />
+                            </StackLayout>
                         </StackLayout>
 
                         <!--其它模块-->
@@ -186,7 +199,7 @@
                             <Button Text="退出账号"
                                 Margin="0,5,0,0"
                                 IsVisible="{Binding UserInfo, Converter={StaticResource IsNotEqualConverter}}"
-                                Command="{Binding LogoutCommand}"/>
+                                Command="{Binding LogoutAsyncCommand}"/>
                             <BoxView Margin="0,10,0,10"
                                  HeightRequest="1"/>
 
