--- a/src/ListenTogether/Pages/PlayingPage.xaml
+++ b/src/ListenTogether/Pages/PlayingPage.xaml
@@ -5,7 +5,7 @@
              xmlns:services="clr-namespace:ListenTogether.Services"
              xmlns:controls="clr-namespace:ListenTogether.Controls"
              xmlns:JiuLing="clr-namespace:JiuLing.Controls.Maui.Handlers.GaussianImage;assembly=JiuLing.Controls.Maui"
-             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             xmlns:mct="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="ListenTogether.Pages.PlayingPage"
              Title="正在播放">
     <ContentPage.Resources>
@@ -129,8 +129,8 @@
                                         HorizontalOptions="Center"
                                         SelectionMode="None">
                             <CollectionView.Behaviors>
-                                <toolkit:EventToCommandBehavior EventName="Scrolled"
-                                                                Command="{Binding LyricsScrolledDoCommand}"/>
+                                <mct:EventToCommandBehavior EventName="Scrolled"
+                                                            Command="{Binding LyricsScrolledDoCommand}"/>
 
                             </CollectionView.Behaviors>
                             <CollectionView.ItemTemplate>
