1、歌曲缓存使用数据库管理

--- a/src/ListenTogether/Pages/CacheCleanPage.xaml
+++ b/src/ListenTogether/Pages/CacheCleanPage.xaml
@@ -43,7 +43,7 @@
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <StackLayout Orientation="Horizontal">
-                            <Label Text="{Binding Name}"
+                            <Label Text="{Binding Remark}"
                                    LineBreakMode="NoWrap"/>
                             <CheckBox HorizontalOptions="EndAndExpand"
                                       IsChecked="{Binding IsChecked}"/>
