--- a/src/ListenTogether/Pages/DesktopShell.xaml
+++ b/src/ListenTogether/Pages/DesktopShell.xaml
@@ -56,7 +56,7 @@
             <ShellContent  ContentTemplate="{DataTemplate pages:SettingsPage}" />
         </Tab>
     </FlyoutItem>
-    <!--<Shell.ItemTemplate>
+    <Shell.ItemTemplate>
         <DataTemplate>
             <StackLayout Orientation="Horizontal">
                 <Image Margin="6,10" WidthRequest="18" HeightRequest="18" Source="{Binding Icon}"/>
@@ -65,5 +65,5 @@
                        TextColor="{AppThemeBinding Dark={StaticResource DarkTitle},Light={StaticResource LightTitle}}"/>
             </StackLayout>
         </DataTemplate>
-    </Shell.ItemTemplate>-->
+    </Shell.ItemTemplate>
 </Shell>
